Text overflow in index page is fixed

--- a/public/css/dict.css
+++ b/public/css/dict.css
@@ -67,6 +67,9 @@
 	color: #1565C0;
 	padding-bottom: 8px;
 	line-height: 24px;
+	overflow: hidden;
+	white-space: nowrap;
+	text-overflow: ellipsis;
 }
 
 
